--- a/src/pages/components/form/usage.mdx
+++ b/src/pages/components/form/usage.mdx
@@ -66,7 +66,7 @@ do you gain by collecting this information?
     }}
   >{`
   <Form>
-  <Stack gap=
+  <Stack gap={6}>
     <TextInput
       helperText="Optional helper text here; if message is more than one line text should wrap (~100 character count maximum)"
       id="test2"
@@ -74,7 +74,7 @@ do you gain by collecting this information?
       labelText="Text input label"
       placeholder="Placeholder text"
     />
-  </div>
+  </Stack>
   <Stack gap={6}>
   <TextArea
     cols={50}
