--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -80,10 +80,10 @@ actions.
 
 ## Live demo
 
-import { Add16 } from '@carbon/icons-react';
+import { Add } from '@carbon/react/icons';
 
 <ComponentDemo
-  scope={{ Add16 }}
+  scope={{ Add }}
   components={[
     {
       id: 'button',
@@ -133,7 +133,7 @@ import { Add16 } from '@carbon/icons-react';
         'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
     }}
   >{`
-      <Button renderIcon={Add16}>Button</Button>
+      <Button renderIcon={Add}>Button</Button>
     `}</ComponentVariant>
   <ComponentVariant
     id="icon-only"
@@ -151,13 +151,9 @@ import { Add16 } from '@carbon/icons-react';
         'https://web-components.carbondesignsystem.com/?path=/story/components-button--icon',
     }}
   >{`
-      <Button
-        hasIconOnly
-        renderIcon={Add16}
-        tooltipAlignment="center"
-        tooltipPosition="bottom"
-        iconDescription="Button description here"
-      />
+     <IconButton align='top' label='Icon button'>
+       <Add size={16}/>
+     </IconButton>
   `}</ComponentVariant>
 </ComponentDemo>
 
