Revert "fix: icon button component demo"
This reverts commit 30aa011643054b7e6d96afe61327a750ee1bcc37.

--- a/src/pages/components/button/code.mdx
+++ b/src/pages/components/button/code.mdx
@@ -6,6 +6,8 @@ description:
 tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ---
 
+import { Add16 } from '@carbon/icons-react';
+
 <PageDescription>
 
 Preview the button component with the React live demo. For detailed code usage
@@ -60,10 +62,8 @@ documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
-import { Add } from '@carbon/react/icons';
-
 <ComponentDemo
-  scope={{ Add }}
+  scope={{ Add16 }}
   components={[
     {
       id: 'button',
@@ -113,7 +113,7 @@ import { Add } from '@carbon/react/icons';
         'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
     }}
   >{`
-      <Button renderIcon={Add}>Button</Button>
+      <Button renderIcon={Add16}>Button</Button>
     `}</ComponentVariant>
   <ComponentVariant
     id="icon-only"
@@ -131,8 +131,12 @@ import { Add } from '@carbon/react/icons';
         'https://web-components.carbondesignsystem.com/?path=/story/components-button--icon',
     }}
   >{`
-     <IconButton align='top' label='Icon button'>
-       <Add size={16}/>
-     </IconButton>
+      <Button
+        hasIconOnly
+        renderIcon={Add16}
+        tooltipAlignment="center"
+        tooltipPosition="bottom"
+        iconDescription="Button description here"
+      />
   `}</ComponentVariant>
 </ComponentDemo>
