--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -80,10 +80,10 @@ actions.
 
 ## Live demo
 
-import { Add } from '@carbon/react/icons';
+import { Add16 } from '@carbon/icons-react';
 
 <ComponentDemo
-  scope={{ Add }}
+  scope={{ Add16 }}
   components={[
     {
       id: 'button',
@@ -133,7 +133,7 @@ import { Add } from '@carbon/react/icons';
         'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
     }}
   >{`
-      <Button renderIcon={Add}>Button</Button>
+      <Button renderIcon={Add16}>Button</Button>
     `}</ComponentVariant>
   <ComponentVariant
     id="icon-only"
@@ -151,9 +151,13 @@ import { Add } from '@carbon/react/icons';
         'https://web-components.carbondesignsystem.com/?path=/story/components-button--icon',
     }}
   >{`
-     <IconButton align='top' label='Icon button'>
-       <Add size={16}/>
-     </IconButton>
+      <Button
+        hasIconOnly
+        renderIcon={Add16}
+        tooltipAlignment="center"
+        tooltipPosition="bottom"
+        iconDescription="Button description here"
+      />
   `}</ComponentVariant>
 </ComponentDemo>
 
